# espnow_slave

./: CMakeLists.txt  espnow_slave.code-workspace  partitions.csv  readme.md
main/: CMakeLists.txt  config.h  main.c
main/BATTERY/inc/: battery.h
main/BATTERY/src/: battery.c
main/BLE/inc/: ble_app.h  common.h  gap.h
main/BLE/src/: ble_app.c  gap.c  gatt_svc.c
main/DATA/inc/: mdata.h
main/DATA/src/: mdata.c
main/FLASH/inc/: device.h
main/FLASH/src/: device.c
main/LED/inc/: mled.h
main/LED/src/: mled.c
main/MOTOR/inc/: motor.h
main/MOTOR/src/: motor.c
main/SYS/inc/: iwdg.h  lowpower.h
main/SYS/src/: lowpower.c
